; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/dialog/extr_util.c_end_dialog.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/dialog/extr_util.c_end_dialog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@dialog_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@FALSE = common dso_local global i64 0, align 8
@stdout = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @end_dialog() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @dialog_state, i32 0, i32 0), align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %9

3:                                                ; preds = %0
  %4 = load i64, i64* @FALSE, align 8
  store i64 %4, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @dialog_state, i32 0, i32 0), align 8
  %5 = call i32 (...) @mouse_close()
  %6 = call i32 (...) @endwin()
  %7 = load i32, i32* @stdout, align 4
  %8 = call i32 @fflush(i32 %7)
  br label %9

9:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @mouse_close(...) #1

declare dso_local i32 @endwin(...) #1

declare dso_local i32 @fflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
